fixed mobile text alignment

--- a/css/artist.css
+++ b/css/artist.css
@@ -83,6 +83,12 @@ caption{
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
+	li{
+		text-align: left;
+	}
+	ul{
+		text-align: left;
+	}
 }
 
 @media (max-width: 980px) and (min-width: 768px) {
